[package]
name = "termarena"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "server"
path = "src/main_server.rs"

[[bin]]
name = "client"
path = "src/main_client.rs"

[dependencies]
bincode = "1.3"
reqwest = { version = "0.11", features = ["blocking"] }
rand = { version = "0.8" }
macroquad = "0.4"
serde = { version = "1.0", features = ["derive"] }
pollster = "0.3"
